# cmake-demo

./: .gitignore  CMakeLists-2.txt  CMakeLists.txt  README.md
src/: main.c
